# WSU_Cpts_322

./: .dockerignore  .gitignore  Dockerfile.app  README.md  docker-compose.yml  nginx.conf  pyproject.toml
attendance_tracker/: __init__.py
attendance_tracker/controllers/: admin.py  analytics.py  auth.py
attendance_tracker/email/: cleaner.py  download_csv.py  emailList.py
attendance_tracker/templates/: add_club.html  admin_home.html  analytics.html  analytics_home.html  assign_club.html  base.html  club_config.html  club_search.html  data_view.html  db_management.html  display_admin_emails.html  index.html  login.html  room_activity.html  room_usage.html
attendance_tracker/templates/src/: input.css
attendance_tracker/tests/: test_auth.py  test_page_navigation.py
attendance_tracker/types/: tables.py
docs/: exampleDataWithDates.csv
sqlite/: export_input_data.csv  init.sql
